# cloud-notepad

./: Cargo.toml
locales/: en.json  jp.json  zh.json
src/: lib.rs  main.rs
src/app/: mod.rs  state.rs
src/data/: db.rs  mod.rs  model.rs
src/data/models/: delete_note.rs  export_note.rs  mod.rs  note.rs  note_version.rs  notebook.rs
src/io/: exporter.rs  importer.rs  mod.rs
src/io/formats/: json.rs  markdown.rs  mod.rs
src/markdown/: mod.rs  parser.rs  renderer.rs
src/markdown/nodes/: code.rs  header.rs  list.rs  mod.rs  text.rs
src/service/: mod.rs  state.rs
src/services/: io_service.rs  mod.rs  note_service.rs  settings_service.rs  tab_service.rs  trash_service.rs  version_service.rs
src/ui/: app.rs  app_layout.rs  editor.rs  main_window.rs  markdown_editor.rs  menu_bar.rs  mod.rs  navigation_bar.rs  sidebar.rs  status_bar.rs  version_history_view.rs
src/ui/dialogs/: file_dialog.rs  mod.rs  singleline_dialog.rs
src/ui/editor/: body.rs  header.rs  mod.rs  preview.rs  tabs.rs
src/ui/sidebar/: mod.rs  notes_view.rs  search_view.rs  tags_view.rs  trash_view.rs
src/utils/: i18n.rs  mod.rs  tab_manager.rs
